# onvif-rs

./: Cargo.toml
src/: error.rs  lib.rs
src/discovery/: client.rs  message.rs  mod.rs
