[package]
name = "onvif-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
quick-xml = { version = "0.38.0", features = ["serialize"] }
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
socket2 = "0.6.0"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["rt", "macros"] }
uuid = { version = "1.17.0", features = ["v4"] }
